[package]
name = "pi-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
